--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pystacia==0.1
-numpy==1.17.4
-requests==2.23.0
 async_timeout==3.0.1
-discord.py==1.3.4
+requests==2.23.0
+opencv_python==4.3.0.36
 youtube_dl==2020.6.16.1
+scikit_image==0.17.2
+numpy==1.17.4
+discord.py==1.3.4
 discord==1.0.1
 Pillow==7.2.0
+skimage==0.0
