--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-async_timeout==3.0.1
-requests==2.23.0
-scikit-image==0.17.2
-scikit-build==0.11.1
-numpy==1.17.4
-opencv-python==4.4.0.46
-youtube_dl==2020.6.16.1
-scikit_image==0.17.2
-discord.py==1.3.4
-discord==1.0.1
-Pillow==8.1.2
-pynacl==1.4.0
-googletrans==3.0.0
+async_timeout>=3.0.1
+requests>=2.23.0
+scikit-image>=0.17.2
+scikit-build>=0.11.1
+numpy>=1.17.4
+opencv-python>=4.4.0.46
+scikit_image>=0.17.2
+discord.py>=1.3.4
+discord>=1.0.1
+Pillow>=8.1.2
+pynacl>=1.4.0
+googletrans>=3.0.0
+discord-py-slash-command>=1.1.2
